--- a/Tetris/settings/project.json
+++ b/Tetris/settings/project.json
@@ -13,7 +13,7 @@
     ]
   ],
   "excluded-modules": [],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1582270710042,
   "design-resolution-width": 960,
   "design-resolution-height": 640,
   "fit-width": false,
